# openai-compatible-chat

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  chat.py  mapping.json  pyproject.toml  rustfmt.toml
.continue/rules/: rust-error-handling.md
.github/workflows/: release.yml
ai_model_info/: Cargo.toml  openai.json
ai_model_info/src/: main.rs
app/: Cargo.toml
app/src/: chat.rs  display.rs  models.rs  tokens.rs
docs/: TODO.md
native/: Cargo.toml
native/src/: chat.rs  cli.rs  config.rs  display.rs  lib.rs  main.rs  models.rs  openai.rs  service.rs  web.rs
native/src/cli/: chat.rs  display.rs  prompt.rs  reedline.rs  themes.rs
native/src/web/: embed.rs
portable/: Cargo.toml
portable/src/: lib.rs
src/: TODO.md  WEB.md  chat.rs  config.rs  display.rs  main.rs  models.rs  porting.md  todo.txt  web.rs
wasm/: Cargo.toml  Trunk.toml  index.html  main.rs  style.css
wasm/.cargo/: config.toml
wasm/src/: lib.rs  main.rs
wasm/src/api/: client.rs  mod.rs  sse.rs
wasm/src/components/: app.rs  banner.rs  conversation.rs  error_panel.rs  input_area.rs  mod.rs  system_prompt.rs
wasm/src/utils/: keyboard.rs  markdown.rs  mod.rs  storage.rs  tokens.rs
wasm/src/web/: cookies.rs  dom.rs  mod.rs  theme.rs
