[workspace]
members = ["ai_model_info", "native", "portable", "wasm"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
portable = { path = "portable" }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
