[package]
name = "native"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-openai = { version = "0.36", features = [
    "chat-completion",
    "model",
] } # pin to a known-good release; bump carefully (and sync with reqwest)
atty = "0.2"
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
clap.workspace = true
console = "0.16" # strip_ansi_codes + Term helpers
crossterm = "0.29"
dialoguer = { version = "0.12", features = [
    "fuzzy-select",
] } # FuzzySelect for model picking
futures = "0.3"
owo-colors = "4"
portable.workspace = true
regex.workspace = true
reqwest = "0.13" # Update carefully to match async_openai dep version
serde_json.workspace = true
serde_regex = "1"
serde.workspace = true
strum.workspace = true
termimad = "0.34" # markdown → ANSI terminal rendering
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reedline = { version = "0.47.0", features = ["system_clipboard"] }

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.3.1"

[features]
cli = []
cors-permissive = []
default = ["cli", "web"]
print-tokens = []
web = []
