[package]
name = "native"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openai-compatible-chat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.36.1", features = [
    "chat-completion",
    "model",
] } # pin to a known-good release; bump carefully (and sync with reqwest)
atty = "0.2.14"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["clock"] }
clap.workspace = true
console = "0.16.3" # strip_ansi_codes + Term helpers
crossterm = "0.29.0"
dialoguer = { version = "0.12.0", features = [
    "fuzzy-select",
] } # FuzzySelect for model picking
futures.workspace = true
portable.workspace = true
regex.workspace = true
reqwest = "0.13.3" # Update carefully to match async_openai dep version
serde_json.workspace = true
serde_regex = "1"
serde.workspace = true
strum.workspace = true
termimad = "0.34.1" # markdown → ANSI terminal rendering
thiserror.workspace = true
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# TODO: eval usefulness of the clipboard feature ?
# TODO: eval history ?
reedline = { version = "0.47.0", features = ["system_clipboard"] }
nu-ansi-term = "0.50.3"
unicode-width = "0.2.2"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.3.1"

[features]

cli = []
cors-permissive = []
default = ["cli", "web"]
web = []
