[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
gloo-net = { version = "0.7", features = ["http"] }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
portable.workspace = true
pulldown-cmark = { version = "0.13", default-features = false, features = [
        "html",
] }
send_wrapper = "0.6"
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.5"
web-sys = { version = "0.3", features = [
        "AbortController",
        "AbortSignal",
        "Document",
        "Element",
        "Headers",
        "HtmlDocument",
        "KeyboardEvent",
        "Location",
        "ReadableStream",
        "ReadableStreamDefaultReader",
        "Request",
        "RequestInit",
        "Response",
        "Storage",
        "Window",
] }

# CLAUDE GUIDELINES TO ERROR HANDLING IN WEB_SYS
# **Definitely log/report — these indicate real problems:**
# - `Request`, `RequestInit`, `Headers`, `Response`
#   -> network failures, malformed requests
# - `ReadableStream`, `ReadableStreamDefaultReader`
#   -> stream errors mid-response, these affect UX directly
# - `AbortController`, `AbortSignal`
#   -> unexpected aborts (expected aborts are noise, log only unexpected ones)
# - `Storage` — localStorage read/write failures
#   -> (e.g. private browsing, quota exceeded)

# **Log only, not user-facing — environmental/browser issues:**
# - `Window`, `Document`, `Element`, `HtmlDocument`
#   if these fail, something is wrong with the DOM environment
#   but there's nothing meaningful to tell the user
# - `KeyboardEvent` — malformed event data, log only

# **Mostly ignore — expected failures:**
# - Cookie r/w via `Element` — cookie access can fail silently in many browsers due to privacy settings, not actionable


[features]
print-tokens = []
