[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
gloo-net = { version = "0.7", features = ["http"] }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
portable.workspace = true
pulldown-cmark = { version = "0.13", default-features = false, features = [
        "html",
] }
send_wrapper = "0.6"
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.5"
web-sys = { version = "0.3", features = [
        "AbortController",
        "AbortSignal",
        "Document",
        "Element",
        "Headers",
        "HtmlDocument",
        "KeyboardEvent",
        "Location",
        "ReadableStream",
        "ReadableStreamDefaultReader",
        "Request",
        "RequestInit",
        "Response",
        "Storage",
        "Window",
] }

[features]
print-tokens = []
