[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
eventsource-stream = "0.2.3"
futures.workspace = true
gloo-net = { version = "0.7.0", features = ["http"] }
js-sys = "0.3.95"
leptos = { version = "0.8.19", features = ["csr"] }
portable.workspace = true
pulldown-cmark = { version = "0.13.3", default-features = false, features = [
        "html",
] }
send_wrapper = "0.6.0"
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
wasm-streams = "0.5.0"
web-sys = { version = "0.3.95", features = [
        "AbortController",
        "AbortSignal",
        "Document",
        "Element",
        "Headers",
        "HtmlDocument",
        "KeyboardEvent",
        "Location",
        "ReadableStream",
        "ReadableStreamDefaultReader",
        "Request",
        "RequestInit",
        "Response",
        "Storage",
        "Window",
] }
